Adjusted logo size. Fixed bug misaligning 3d spinning profile image

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -127,7 +127,7 @@ background-image: -webkit-radial-gradient(center bottom, circle closest-corner, 
 background-image: radial-gradient(circle closest-corner at center bottom, #333333 0%, #000000 70%);
 }
 #logo_image {
-	margin: 8px 0px 0px 5px;
+	margin: 4px 0px 0px 3px;
 }
 #support_page_content {
 	margin-top: 100px;
